Token Handler code updated. Created Interface and it's implementing class ITokenHandler and TokenUtility.

--- a/TokenHandler.csproj
+++ b/TokenHandler.csproj
@@ -13,4 +13,8 @@
     <PackageId>TokenHandler</PackageId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Token.cs" />
+  </ItemGroup>
+
 </Project>
